k8s/overlays/prod/deployment-ws-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharebite-ws
spec:
  replicas: 2
